* Fix heading alignments

--- a/assets/src/less/aqm.less
+++ b/assets/src/less/aqm.less
@@ -39,6 +39,7 @@
 	h3 {
 		font-size: 100%;
 		padding-left: 1em;
+		line-height: 20px;
 
 		.dashicons {
 			margin-right: 0.25em;
